--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,90 @@
-.App {
+.nameh1{
   text-align: center;
 }
+img{
+  width: 300px;
+  height: 300px;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  padding: 10px 10px 10px 10px;
+  border: 3px solid red;
+}
+h2{
+  color: rgba(128, 128, 128, 0.803);
+  font-size: 20px;
+  margin-left: 5px;
+}
+.maindiv{
+  margin: 20px;
+}
+.child2{
+  margin-left: 30px;
+}
+.cost{
+  font-size: 15px;
+  color: black;
+}
+.sortbuttons{
+  margin: auto;
+  margin-bottom: 20px;
+}
+.sortbuttons>button{
+  width: 70px;
+  height: 30px;
+  background-color: rgb(52, 52, 196);
   color: white;
+  margin-left: 10px;
+  border: transparent;
 }
-
-.App-link {
-  color: #61dafb;
+.cuisine{
+  display: flex;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Ratingbuttons>button{
+ width: 120px;
+ height: 30px;
+ background-color: rgb(52, 52, 196);
+ color: white;
+ margin-left: 10px;
+ border: transparent;
+}
+h3{
+  color: brown;
+}
+.rat{
+  width: 30px;
+  height: 20px;
+  font-size: 15px;
+  color: white;
+  font-weight: 500;
+  background-color: rgb(34, 172, 34);
+  padding: 2px 2px 2px 2px;
+  border-radius: 10%;
+}
+.toggle{
+  width: 300px;
+  font-size: 21px;
+  height: 50px;
+  border-radius: 1px;
+  margin-left: 700px;
+  background-color: rgb(34, 34, 195);
+  color: white;
+  font-weight: 600;
+}
+.Payment>button{
+  width: 70px;
+  height: 30px;
+  background-color: rgb(52, 52, 196);
+  color: white;
+  margin-left: 10px;
+  border: transparent;
+}
+.pagination>button{
+  width: 30px;
+  height: 30px;
+  background-color: rgb(52, 52, 196);
+  color: white;
+  margin-left: 10px;
+  border: transparent;
 }
