--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 img{
   width: 300px;
-  height: 300px;
+  height: 400px;
 
 }
 .main{
@@ -87,4 +87,7 @@ h3{
   color: white;
   margin-left: 10px;
   border: transparent;
+}
+label{
+  margin-right: 10px;
 }
