--- a/src/App.css
+++ b/src/App.css
@@ -81,13 +81,18 @@ h3{
   border: transparent;
 }
 .pagination>button{
-  width: 30px;
+  width: 50px;
   height: 30px;
-  background-color: rgb(52, 52, 196);
-  color: white;
-  margin-left: 10px;
+ 
+  color: black;
+  
   border: transparent;
 }
 label{
   margin-right: 10px;
+}
+.pagination>button:hover{
+
+  background-color: rgb(52, 52, 196);
+  color: white;
 }
